# src/routes/oraculo.ts
@@ -10,7 +10,7 @@ router.get("/:clienteId", authMiddleware, async (req, res) => {
 #swagger.tags = ['Oráculo']
 #swagger.summary = 'Gera recomendações de livros para um cliente'
 #swagger.description = 'Gera recomendações de livros para um cliente com base em seu histórico de compras e preferências.'
-#swagger.parameters['Authorization'] = {
+#swagger.parameters['authorization'] = {
 in: 'header',
 required: true,
 description: 'Token de autenticação (Bearer)',
